--- a/Projeto final/perfil.css
+++ b/Projeto final/perfil.css
@@ -1,9 +1,9 @@
+/* perfil.css */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif; 
-    
 }
 
 body {
@@ -33,17 +33,15 @@ header {
 
 .title-container {
     flex-grow: 1;
-    display: flexbox;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.title-container h1{
+
+.title-container h1 {
     color: white;
     font-size: x-large;
-}
-.time{
-    margin-left: 100px;
 }
 
 nav a {
@@ -51,7 +49,7 @@ nav a {
 }
 
 a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
@@ -60,15 +58,14 @@ a:hover {
     color: black;
 }
 
+a:focus, button:focus, input:focus, textarea:focus {
+    outline: 2px solid #1C446B;
+    outline-offset: 2px;
+}
+
 .logo {
     max-width: 50px;
     margin-right: 15px;
-}
-
-header h1 {
-    font-size: 24px;
-    font-weight: 400;
-    color: black;
 }
 
 .container {
