--- a/Projeto final/style.css
+++ b/Projeto final/style.css
@@ -1,3 +1,4 @@
+/* style.css */
 * {
     margin: 0;
     padding: 0;
@@ -34,17 +35,15 @@ header {
 
 .title-container {
     flex-grow: 1;
-    display: flexbox;
+    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
 }
-.title-container h1{
+
+.title-container h1 {
     color: white;
     font-size: x-large;
-}
-.time{
-    margin-left: 100px;
 }
 
 nav a {
@@ -52,7 +51,7 @@ nav a {
 }
 
 a {
-    color:white;
+    color: white;
     text-decoration: none;
 }
 
@@ -73,7 +72,8 @@ header h1 {
 }
 
 .container {
-    width: 420px;
+    width: 100%;
+    max-width: 420px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
     backdrop-filter: blur(10px);
@@ -201,7 +201,7 @@ h1 {
     margin-bottom: 10px; /* Ajuste conforme necessário para espaço entre a imagem e o botão */
 }
 
-.principal{
+.principal {
     margin-left: 100px;
 }
 
@@ -235,4 +235,70 @@ h1 {
     color: red;
     font-size: 0.8em;
     display: block;
+}
+
+/* Media Queries para Responsividade */
+@media (max-width: 768px) {
+    .header-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .title-container h1 {
+        font-size: large;
+    }
+
+    .container {
+        width: 90%;
+        padding: 20px;
+    }
+
+    .input-container {
+        margin: 20px 0;
+    }
+
+    .submit-button {
+        height: 45px;
+        font-size: 14px;
+    }
+
+    .register-link p {
+        font-size: 14px;
+    }
+
+    .register-link p a {
+        font-size: 14px;
+    }
+
+    .g-signin2 {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 480px) {
+    .title-container h1 {
+        font-size: medium;
+    }
+
+    .container {
+        width: 100%;
+        padding: 15px;
+    }
+
+    .input-container {
+        margin: 15px 0;
+    }
+
+    .submit-button {
+        height: 40px;
+        font-size: 12px;
+    }
+
+    .register-link p {
+        font-size: 12px;
+    }
+
+    .register-link p a {
+        font-size: 12px;
+    }
 }
